--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem aperiam dolorum amet, dolores, eveniet necessitatibus praesentium laborum non quis repellendus porro ut culpa iste, eligendi maiores iusto voluptas a fugit.</p>
             </div>
             <div class="image">
-                <img src="./images/grid.svg" >
+                <img src="grid.svg" >
             </div>
         </div>
     </header>
